# dsd-pythonanywhere

./: AGENTS.md  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: integration_tests.yaml  release.yaml  tests.yaml
developer_resources/: api-exploration.ipynb
dsd_pythonanywhere/: __init__.py  client.py  deploy.py  deploy_messages.py  platform_deployer.py
dsd_pythonanywhere/templates/: settings.py
scripts/: setup.sh
tests/: conftest.py  smoke_test.py
tests/e2e_tests/: test_deployment.py  utils.py
tests/integration_tests/: conftest.py  test_pythonanywhere_config.py  test_setup_script.py
tests/integration_tests/reference_files/: .gitignore  requirements.txt  settings.py
tests/unit_tests/: test_client_api_client.py  test_client_command_run.py  test_client_console.py  test_client_log_message.py  test_platform_deployer.py
