[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dsd-pythonanywhere"
version = "0.1.0"
description = "A plugin for django-simple-deploy, supporting deployments to PythonAnywhere."
readme = "README.md"

authors = [
    {name = "Eric Matthes", email = "ehmatthes@gmail.com" },
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

keywords = ["django", "deployment"]

requires-python = ">=3.9"

dependencies = [
    "django>=4.2",
    "pluggy>=1.5.0",
    "toml>=0.10.2",
    "requests>=2.32.2",
    "django-simple-deploy>=0.9.0",
    "pythonanywhere>=0.15.5",
    "pythonanywhere-core>=0.2.4",
]

[project.optional-dependencies]
dev = [
    "black>=24.1.0",
    "build>=1.2.1",
    "pytest>=8.3.0",
    "twine>=5.1.1",
]

# [project.urls]
# "Documentation" = "<documentation URL>"
# "GitHub" = "<GH repo URL>"
# "Changelog" = "<changelog URL"

[tool.setuptools]
packages = [
    "dsd_pythonanywhere",
    "dsd_pythonanywhere.templates",
]
include-package-data = true

[tool.ruff]
line-length = 100
exclude = ["dsd_pythonanywhere/templates/settings.py", "tests/integration_tests/test_pythonanywhere_config.py"]

[dependency-groups]
dev = [
    "jupyterlab>=4.4.7",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
    "ruff>=0.13.0",
]

[tool.pytest.ini_options]
testpaths = [ "tests/unit_tests" ]
